--- a/client/src/.travis.yml
+++ b/client/src/.travis.yml
@@ -8,8 +8,7 @@ before_install:
   - docker build -t gp/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true gp/react-test npm test
-
+  - docker run USERNAME/react-test npm test -- --coverage
 after_success:
   - docker build -t gp/multi-client ./client
   - docker build -t gp/multi-nginx ./nginx
