--- a/client/src/.travis.yml
+++ b/client/src/.travis.yml
@@ -1,6 +1,5 @@
 sudo: required
 
-
 services:
   - docker
 
@@ -8,7 +7,7 @@ before_install:
   - docker build -t gp/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run USERNAME/react-test npm test -- --coverage
+  - docker run gp/react-test npm test -- --coverage
 after_success:
   - docker build -t gp/multi-client ./client
   - docker build -t gp/multi-nginx ./nginx
