--- a/client/src/.travis.yml
+++ b/client/src/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t gp/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run gp/react-test npm test -- --coverage
+  - docker run -e CI=true gp/react-test npm test
 after_success:
   - docker build -t gp/multi-client ./client
   - docker build -t gp/multi-nginx ./nginx
