--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,3 +1,4 @@
+ 
 FROM node:alpine as builder
 WORKDIR '/app'
 COPY ./package.json ./
@@ -7,5 +8,5 @@ RUN npm run build
 
 FROM nginx
 EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
